@@ -41,10 +41,6 @@
  * and last word in the "user area" for their link pointers; the small
  * chunks are themselves kept in a list and use their first word for the
  * list pointer. Small free blocks are defragmented as described below.
-#ifdef SMALLOC_ORDER_FREELISTS
- * The leading part of the freelist consisting of the non-defragmented blocks
- * is ordered by the of the blocks. The defragmented blocks are unsorted.
-#endif
  *
  * If a small block can't be allocated from the appropriate free list nor
  * the small chunk, the system tries two more strategies before allocating
@@ -1125,34 +1121,6 @@ void MAKE_SMALL_FREE (word_t *block, word_t bsize)
     block[bsize] |= PREV_BLOCK;
 
     head = sfltable[ix];
-#ifdef SMALLOC_ORDER_FREELISTS
-    if (!head || head > block || (head[M_SIZE] & M_DEFRAG))
-    {
-        block[M_LINK] = (word_t) head;
-        block[M_PLINK(bsize)] = (word_t)block | flag;
-          /* Let the PLINK point to block itself, to satisfy sanity checks */
-        sfltable[ix] = block;
-    }
-    else
-    {
-        word_t * prev;
-
-        do {
-            prev = head;
-            head = (word_t *)head[M_LINK];
-        } while (head && head < block && !(head[M_SIZE] & M_DEFRAG));
-
-        block[M_LINK] = (word_t) head;
-        block[M_PLINK(bsize)] = (word_t)prev | flag;
-        prev[M_LINK] = (word_t)block;
-    }
-
-    if (head)
-        head[M_PLINK(head[M_SIZE] & M_MASK)] = (word_t)block | flag;
-
-    if (flag)
-        block[M_PLINK(bsize)-1] = bsize;
-#else
     if (head)
         head[M_PLINK(head[M_SIZE] & M_MASK)] = (word_t)block | flag;
     block[M_LINK] = (word_t) head;
@@ -1163,7 +1131,6 @@ void MAKE_SMALL_FREE (word_t *block, word_t bsize)
         block[M_PLINK(bsize)-1] = bsize;
 
     sfltable[ix] = block;
-#endif /* SMALLOC_ORDER_FREELISTS */
     small_free[ix]++;
     count_up(small_free_stat, bsize * SINT);
 
@@ -1342,9 +1309,6 @@ defragment_small_lists (int req)
                * However, by not setting it we make the algorithm a bit
                * more robust, and lose only a few cycles the next time
                * around.
-#ifdef SMALLOC_ORDER_FREELISTS
-               * It also simplifies the sorted insertion in MAKE_SMALL_FREE.
-#endif
                */
         }
     } /* for (ix = SMALL_BLOCK_NUM..0 && !found) */
@@ -2550,7 +2514,9 @@ add_to_free_list (word_t *ptr)
             if (p->next != NULL)
             {
                 while (tail->next && tail->next < r)
+                {
                     tail = tail->next;
+                }
             }
 
             r->next = tail->next;
@@ -3068,7 +3034,6 @@ found_fit:
     /* ptr is now a pointer to a free block in the free list */
 
 #ifdef USE_AVL_FREELIST
-
     /* If there is more than one free block for this size, take
      * the first block from the freelist to avoid copying around
      * the AVL node information.
